--- a/README
+++ b/README
@@ -7,3 +7,9 @@ Work Distribution:
 ริว: HTML/CSS - UI
 เมฆ: SQL Database
 มาร์ค: 
+
+To do:
+Change html to php
+Connect to SQL
+Do the content display
+Do the content add
