--- a/README
+++ b/README
@@ -11,5 +11,5 @@ Work Distribution:
 To do:
 Change html to php
 Connect to SQL
-Do the content display
-Do the content upload
+Do the content display for user and films
+Do the content upload for user and films
